--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/jks-liu/danmaku-everywhere.ext/issues"
   },
-  "homepage": "https://github.com/jks-liu/danmaku-everywhere.ext#readme"
+  "homepage": "https://github.com/jks-liu/danmaku-everywhere.ext#readme",
+  "dependencies": {
+    "parcel": "^2.0.0-beta.2",
+    "typescript": "^4.3.5"
+  }
 }
