--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/jks-liu/danmaku-everywhere.ext/issues"
   },
   "homepage": "https://github.com/jks-liu/danmaku-everywhere.ext#readme",
-  "dependencies": {
+  "devDependencies": {
     "parcel": "^2.0.0-beta.2",
     "typescript": "^4.3.5"
   }
