--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/jks-liu/danmaku-everywhere.ext#readme",
   "devDependencies": {
     "parcel": "^2.0.0-beta.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "web-ext": "^6.2.0"
   }
 }
