--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/jks-liu/danmaku-everywhere.ext#readme",
   "devDependencies": {
+    "eslint": "^7.28.0",
     "parcel": "^2.0.0-beta.2",
     "typescript": "^4.3.5",
     "web-ext": "^6.2.0"
