--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.28.0",
     "parcel": "^2.0.0-beta.2",
     "typescript": "^4.3.5",
-    "web-ext": "^6.2.0"
+    "web-ext": "^6.2.0",
+    "webextension-polyfill-ts": "^0.26.0"
   }
 }
